# research

./: .gitignore  CHANGELOG.md  README.md  eda_mela.ipynb  init.py  losses.py  lr_scheduler.py  model_selection.py  modules.py  package-lock.json  package.json  pyproject.toml  research.cabal  scheduler.py  tmp.py  transforms.py  tsconfig.json  utils.py
agg_monad/: io.ts  state2.ts
async_await/: aio.py  basic_cb.py  basic_yl.py  gen.py  main.py  prod_cons_cb.py  prod_cons_mt.py  prod_cons_yl.py  queue.js  scheduler_cb.py  scheduler_yl.py  select.py  tcp_yl.py
classification/: model.py  train.py
concurrency/: ex_ray.py  ex_tracktor.py  example_ray.py  gen.py  lb.py  m_n.py  match.py  playground.py  sync_iter_async_code.py  tmp.py  utils.py
cycle_gan/: train.py
dag_proc_opt/: main_ray.py
datasets/: image_folder.py
dcgan/: model.py  model2.py  model3.py  train.py
diff_rendering/: main.py
eff_det/: box_coding.py  losses.py  map.py  metrics.py  train.py  transform.py  utils.py
fcos/: README.md  box_coder.py  fcos.py  loss.py  map.py  metrics.py  train.py  transforms.py  utils.py
fix_match/: README.md  train.py  utils.py
gan/: README.md  discriminator.py  generator.py  losses.py  model.py  modules.py  train.py
mcmc/: metropolis_hastings.py
mela/: dataset.py  infer.py  model.py  modules.py  sampler.py  sampler2.py  train.py  transforms.py  utils.py
misc/: mc_integration.py  metrics.py  preprocess.py  rec.py  tmp.py  utils.py  wikiart.py
mix_match/: model.py  train.py  utils.py
models/: wide_resnet.py
monads/: index.ts  maybe.ts  monad.ts  state.ts  use_state.ts
monads_py/: q.py
monads_ts/: cont.ts  io.ts  maybe.ts  monad.ts  promise_all.ts  reader.ts  state.ts
mpi/: bcast.py  bcast2.py  comm.py  p2p.py  scat.py
mpl/: README.md  train.py
mpl_tf/: train.py
mpl_torch/: README.md  model.py  train.py  utils.py
ntm/: model.py  train.py
object_detection/: box_utils.py  transforms.py  utils.py
python_parallel/: tmp.py
randaugment/: transforms.py
ray_tracing/: camera.py  light.py  main.py  main_old.py  main_v2.py  material.py  objects.py  ray.py  scene.py  utils.py  vector.py
ray_tracing_rust/: Cargo.toml  README.md
ray_tracing_rust/src/: camera.rs  color.rs  intersection.rs  main.rs  material.rs  object.rs  object_list.rs  ray.rs  reflection.rs  vector.rs
rl/: ac.py  ppo.py  tmp.py  tmp2.py  utils.py  wrappers.py
rl_old/: ac.py  tmp.py  utils.py
rpc/: async_greeter_server.py  greeter_client.py  greeter_server.py
rpg/: Cargo.toml
rrin/: README.md  dataset.py  model.py  sandbox.py  train.py  unet.py
sandbox/: aio_backpressure.py  cont_monad.hs  maybe.hs  ray_gen.py  ray_main_async.py  tmp.txt  yampa_sandbox.hs
scripts/: download_wikiart.py  resize_in_folder.py
segmentation/: config.py  dataset.py  model.py  train.py  transforms.py
sim_siam/: dataset.py  model.py  train.py
sockets/: client.py  server.py
streams/: index.ts  queue.ts
stylegan/: README.md  train.py
stylegan_tf/: model.py  train.py
summary_writers/: file_system.py  utils.py
tacotron/: README.md  compute_dataset_stats.py  dataset.py  model.py  sampler.py  spectrogram_stats.pth  train.py  utils.py  vocab.py
test/: test_losses.py
tests/: test_losses.py  test_utils.py
transforms/: __init__.py  audio.py  image.py  text.py
triton_inference/: request.py  (+1 more)
(+63 files in other folders)
