[tool.black]
line-length = 99
#target-version = ['py36', 'py37', 'py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.poetry]
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
description = ""
name = "research"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"
jax = {extras = ["cpu"], version = "^0.3.13"}
jaxlib = "^0.3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
ipython = "^8.3.0"
jupyterlab = "^3.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
