[tool.black]
line-length = 99
#target-version = ['py36', 'py37', 'py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.poetry]
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
description = ""
name = "research"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^22.3.0"
bokeh = "^2.4.3"
dask = {extras = ["distributed", "dataframe"], version = "^2022.5.2"}
ipython = "^8.4.0"
isort = "^5.10.1"
jax = {extras = ["cpu"], version = "^0.3.13"}
jaxlib = "^0.3.10"
joblib = "^1.1.0"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.1"
mimesis = "^5.4.0"
numpy = "^1.22.3"
python = ">=3.8,<3.11"
scipy = "^1.8.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
autoflake = "^1.4"
yapf = "^0.32.0"
toml = "^0.10.2"
gym = {extras = ["classic_control", "mujoco"], version = "^0.25.1"}
rlax = "^0.1.2"
dm-haiku = "^0.0.7"
tensorboardX = "^2.5.1"
tensorboard = "^2.10.0"
optax = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
