[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []


[tool.poetry]
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
description = ""
name = "research"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^22.3.0"
bokeh = "^2.4.3"
ipython = "^8.4.0"
isort = "^5.10.1"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.1"
# python = ">=3.8,<3.11"
scipy = "^1.8.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
autoflake = "^1.4"
yapf = "^0.32.0"
toml = "^0.10.2"
gym = { extras = ["classic_control", "mujoco"], version = "^0.25.1" }
dm-haiku = "^0.0.7"
tensorboardX = "^2.5.1"
tensorboard = "^2.10.0"
pytest = "^7.1.2"
numpy = "1.21.6"
jax = "^0.3.17"
optax = "^0.1.3"
jaxlib = "^0.3.15"
rlax = "^0.1.4"
fire = "^0.4.0"
tritonclient = { extras = ["all"], version = "^2.25.0" }
ray = "<2"
grpcio = "1.41.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
