[package]
name = "ray_tracing_rust"
version = "0.1.0"
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
image = "0.23.5"
clap = "3.0.0-beta.1"
rand = "0.7.3"

